# ChatServer2

./: .gitignore  AsioIOServicePool.h  CMakeLists.txt  CServer.h  CSession.cpp  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServer.cpp  ChatServiceImpl.cpp  ChatServiceImpl.h  LogicSystem.cpp  LogicSystem.h  MsgNode.cpp  MySqlDao.cpp  MySqlDao.h  MySqlMgr.cpp  MySqlMgr.h  RedisConPool.h  RedisMgr.cpp  RedisMgr.h  StatusGrpcClient.h  UserMgr.cpp  config.json  const.h  data.h
proto/: message.proto
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/application/: CMakeLists.txt  ChatServiceImpl.cpp  LogicSystem.h  UserMgr.h
src/common/: CMakeLists.txt  Singleton.h
src/domain/: CMakeLists.txt  const.h  data.h
src/infra/config/: CMakeLists.txt  ConfigMgr.cpp  ConfigMgr.h
src/infra/grpc/: CMakeLists.txt  ChatConPool.cpp  ChatConPool.h  StatusConPool.cpp  StatusConPool.h  StatusGrpcClient.cpp
src/infra/mysql/: CMakeLists.txt  MySqlDao.h  MySqlMgr.h  MySqlPool.cpp  MySqlPool.h
src/infra/redis/: CMakeLists.txt  RedisConPool.cpp  RedisMgr.h
src/net/: AsioIOServicePool.cpp  CMakeLists.txt  CServer.cpp  CSession.cpp  CSession.h  MsgNode.h
